# mytetra_dev

./: .clang-format  .gitignore  CMakeLists.txt  README.md
src/: CMakeLists.txt  main.cpp  main.h
src/controllers/actionLog/: ActionLogController.cpp  ActionLogController.h
src/controllers/attachTable/: AttachTableController.cpp  AttachTableController.h
src/controllers/databasesManagement/: DatabasesManagementController.cpp  DatabasesManagementController.h
src/controllers/recordTable/: RecordTableController.cpp  RecordTableController.h
src/controllers/shortcutSettings/: ShortcutSettingsController.cpp  ShortcutSettingsController.h
src/libraries/: ActionLogger.cpp  ActionLogger.h  CMakeLists.txt  ClipboardBranch.cpp  ClipboardBranch.h  ClipboardRecords.cpp  ClipboardRecords.h  Downloader.cpp  Downloader.h  FixedParameters.cpp  FixedParameters.h  GlobalParameters.cpp  GlobalParameters.h  IconSelectDialog.cpp  IconSelectDialog.h  MtStyledItemDelegate.h  MtTableWidget.h  PeriodicCheckBase.cpp  PeriodicCheckBase.h  PeriodicSynchro.cpp  PeriodicSynchro.h  PreviewFileDialog.h  ShortcutManager.h  Singleton.h  TimerMonitoring.cpp  TimerMonitoring.h  TraceLogger.h  TrashMonitoring.cpp  TrashMonitoring.h  WalkHistory.cpp  WalkHistory.h  WindowSwitcher.cpp  WindowSwitcher.h
src/libraries/ShortcutManager/: ShortcutManager.cpp  ShortcutManager.h
src/libraries/helpers/: ActionHelper.cpp  ActionHelper.h  CMakeLists.txt  ConfigEditorHelper.cpp  ConfigEditorHelper.h  CssHelper.cpp  CssHelper.h  DebugHelper.cpp  DebugHelper.h  DiskHelper.cpp  DiskHelper.h  GestureHelper.h  HtmlHelper.h  MessageHelper.h  MultiLineInputDialog.cpp  MultiLineInputDialog.h  ObjectHelper.h  ScreenHelper.h  UniqueIdHelper.cpp  UniqueIdHelper.h
src/libraries/qtSingleApplication/: qtlocalpeer.h  qtlockedfile.h
src/libraries/wyedit/: CMakeLists.txt  Editor.cpp  Editor.h  EditorAbsTable.cpp  EditorAbsTable.h  EditorAbsTableCell.cpp  EditorAbsTableCell.h  EditorAddTableForm.cpp  EditorAddTableForm.h  EditorConfig.cpp  EditorConfig.h  EditorConfigDialog.cpp  EditorConfigDialog.h  EditorConfigFont.cpp  EditorConfigFont.h  EditorConfigMathExpression.cpp  EditorConfigMathExpression.h  EditorConfigMisc.cpp  EditorConfigMisc.h  EditorConfigToolbars.cpp  EditorConfigToolbars.h  EditorContextMenu.cpp  EditorContextMenu.h  EditorCursorPositionDetector.cpp  EditorCursorPositionDetector.h  EditorFindDialog.cpp  EditorFindDialog.h  EditorFontFamilyComboBox.cpp  EditorFontFamilyComboBox.h  EditorFontSizeComboBox.cpp  EditorFontSizeComboBox.h  EditorFontToolFocus.cpp  EditorFontToolFocus.h  EditorImageProperties.cpp  EditorImageProperties.h  EditorIndentSliderAssistant.cpp  EditorIndentSliderAssistant.h  EditorMathExpressionDialog.cpp  EditorMathExpressionDialog.h  EditorMultiLineInputDialog.h  (+16 more)
src/models/actionLog/: ActionLogModel.cpp  ActionLogModel.h
src/models/appConfig/: AppConfig.cpp  AppConfig.h
src/models/attachTable/: Attach.cpp  Attach.h  AttachTableData.cpp  AttachTableData.h  AttachTableModel.cpp  AttachTableModel.h
src/models/databasesManagement/: DatabasesManagementModel.cpp  DatabasesManagementModel.h  KnownBasesConfig.cpp  KnownBasesConfig.h
src/models/recordTable/: Record.cpp  Record.h  RecordTableData.cpp  RecordTableData.h  RecordTableModel.cpp  RecordTableModel.h  RecordTableProxyModel.cpp  RecordTableProxyModel.h
src/models/shortcutSettings/: ShortcutSettingsModel.cpp  ShortcutSettingsModel.h
src/models/tree/: KnowTreeModel.cpp  KnowTreeModel.h  TreeItem.cpp  TreeItem.h  TreeModel.cpp  TreeModel.h  XmlTree.cpp  XmlTree.h
src/views/actionLog/: ActionLogScreen.h  ActionLogView.h
src/views/appConfigWindow/: AppConfigDialog.cpp  AppConfigDialog.h  AppConfigPage_Appearance.cpp  AppConfigPage_Appearance.h  AppConfigPage_Attach.cpp  AppConfigPage_Attach.h  AppConfigPage_History.cpp  AppConfigPage_History.h  AppConfigPage_Keyboard.cpp  AppConfigPage_Keyboard.h  AppConfigPage_Main.cpp  AppConfigPage_Main.h  AppConfigPage_Misc.cpp  AppConfigPage_Misc.h  AppConfigPage_RecordTable.cpp  AppConfigPage_RecordTable.h  AppConfigPage_Synchro.cpp  AppConfigPage_Synchro.h  ConfigDialog.cpp  ConfigDialog.h  ConfigPage.cpp  ConfigPage.h
src/views/attachTable/: AttachTableScreen.cpp  AttachTableScreen.h  AttachTableView.cpp  AttachTableView.h
src/views/consoleEmulator/: CommandRun.cpp  CommandRun.h  ConsoleEmulator.cpp  ConsoleEmulator.h
src/views/databasesManagement/: DatabasesManagementScreen.cpp  DatabasesManagementScreen.h  DatabasesManagementTable.cpp  DatabasesManagementTable.h
src/views/dialog/: OverTextToolButton.cpp  OverTextToolButton.h  ReduceMessageBox.cpp  ReduceMessageBox.h
src/views/findInBaseScreen/: FindScreen.cpp  FindScreen.h  FindTableWidget.cpp  FindTableWidget.h
src/views/installDialog/: InstallDialog.cpp  InstallDialog.h
src/views/mainWindow/: MainWindow.cpp  MainWindow.h
src/views/printPreview/: PreviewView.cpp  PreviewView.h  PrintPreview.cpp  PrintPreview.h
src/views/record/: AddNewRecord.cpp  AddNewRecord.h  (+6 more)
(+101 files in other folders)
